[package]
name = "autosolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lapin = "2.0.0-alpha.4"
reqwest = "0.11"
serde_json = "1.0"
tokio = "1"
tokio-amqp = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.shared]
path = "../shared"

[dev-dependencies.tokio]
version = "1"
features = ["macros"]
