[package]
name = "ethernet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
futures = "0.3"
hex = "0.4"
rand = "0.8"
serde_json = "1.0"

[dependencies.ethers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-providers]
git = "https://github.com/x04/ethers-rs"
default-features = false
features = ["ws"]

[dependencies.k256]
version = "0.9"
features = ["ecdsa-core"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.shared]
path = "../shared"

[dependencies.tokio]
version = "1"
features = ["full"]
