[package]
name = "net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
futures = "0.3"
crossbeam = "0.8"
indexmap = "1.6"

[dependencies.cronet-sys]
path = "../cronet-sys"

[dev-dependencies.tokio]
version = "1.12"
features = ["full"]
