[package]
name = "nfty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argh = "0.1"
async-recursion = "0.3"
base64 = "0.13"
deno_core = "0.103"
deno_runtime = "0.29"
dotenv = "0.15"
futures-util = "0.3"
futures-core = "0.3"
hex = "0.4"
humantime = "2.1"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
pin-project = "1"
rand = "0.8"
rodio = "0.14"
serde_json = "1.0"
toml = "0.5"
url = "2.2"

[dependencies.autosolve]
path = "../autosolve"

[dependencies.async-trait]
version = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["default", "serde"]

[dependencies.shared]
path = "../shared"

[dependencies.ethers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-core]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-signers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-providers]
git = "https://github.com/x04/ethers-rs"
default-features = false
features = ["ws", "rustls"]

[dependencies.k256]
version = "0.9"
features = ["ecdsa-core"]

[dependencies.net]
path = "../net"

[dependencies.reqwest]
default-features = false
version = "0.11"
features = ["gzip", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.thiserror]
version = "1.0"
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[features]
themida = []
