[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
serde = "1.0"
toml = "0.5"

[dependencies.ethers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-core]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-signers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-providers]
git = "https://github.com/x04/ethers-rs"
default-features = false
features = ["ws"]

[dependencies.reqwest]
default-features = false
version = "0.11"
features = ["gzip", "rustls-tls"]
