[package]
name = "spyglass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
hex = "0.4"
serde_json = "1.0"

[dependencies.ethers]
git = "https://github.com/x04/ethers-rs"

[dependencies.ethers-providers]
git = "https://github.com/x04/ethers-rs"
default-features = false
features = ["ws", "rustls"]

[dependencies.serenity]
version = "0.10"
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
